@@ -26,6 +26,7 @@ Version dev
     * tplckr.itwp.album.pGenere - Created
     * tplckr.itwp.album.pTipo - Created
     * tplckr.itwp.film.pAnnouscita - Created
+    * tplckr.itwp.film.pCortometraggio - Created
     * tplckr.itwp.film.pDurata - Created
     * tplckr.itwp.film.pGenere - Created
     * tplckr.itwp.film.pRatio - Created
